# test_SP_sertification

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
electronics_store/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
electronics_store/migrations/: 0001_initial.py  0002_alter_networknode_city_alter_networknode_country_and_more.py
fixtures/: 001_users.json  002_nodes.json  003_products.json
